--- a/plugins/protocols/meson.build
+++ b/plugins/protocols/meson.build
@@ -1,9 +1,10 @@
 protocol_plugins = [
-  'foreign-toplevel', 'gtk-shell', 'wayfire-shell', 'xdg-activation', 'shortcuts-inhibit', 'input-method-v1'
+  'foreign-toplevel', 'gtk-shell', 'wayfire-shell', 'xdg-activation', 'shortcuts-inhibit',
+  'input-method-v1', 'session-lock'
 ]
 
 all_include_dirs = [wayfire_api_inc, wayfire_conf_inc, plugins_common_inc]
-all_deps = [wlroots, pixman, wfconfig, wf_protos, json]
+all_deps = [wlroots, pixman, wfconfig, wf_protos, json, cairo, pango]
 
 foreach plugin : protocol_plugins
   shared_module(plugin, plugin + '.cpp',
