Remove comment that says wf-dock started with autostart_wf_shell (#2329)
* Remove comment that says wf-dock started with autostart_wf_shell

* Added comment on wf-dock

--- a/wayfire.ini
+++ b/wayfire.ini
@@ -130,6 +130,10 @@ autostart_wf_shell = true
 #
 # background = wf-background
 # panel = wf-panel
+#
+# You may also use wf-dock,
+# which is included in wf-shell but is not enabled by default.
+#
 # dock = wf-dock
 
 # Output configuration
