Update wayfire.ini (#2519)
added dbus-update-activation-environment command to autostart

--- a/wayfire.ini
+++ b/wayfire.ini
@@ -119,6 +119,9 @@ toggle = <super> <ctrl> KEY_F
 # Startup commands ─────────────────────────────────────────────────────────────
 
 [autostart]
+#Gtk+3 applications slow startup or .desktop files not opening
+#https://github.com/WayfireWM/wayfire/wiki/Tips-&-Tricks#gtk3-applications-slow-startup-or-desktop-files-not-opening
+0_env = dbus-update-activation-environment --systemd WAYLAND_DISPLAY DISPLAY XAUTHORITY
 
 # Automatically start background and panel.
 # Set to false if you want to override the default clients.
