--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.direnv/
+result
 
 # Created by https://www.toptal.com/developers/gitignore/api/c++,meson,ninja,linux
 # Edit at https://www.toptal.com/developers/gitignore?templates=c++,meson,ninja,linux
