--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	url = https://gitlab.freedesktop.org/wlroots/wlroots.git
 [submodule "subprojects/wf-utils"]
 	path = subprojects/wf-utils
-	url = https://github.com/WayfireWM/wf-utils.git
+	url = https://github.com/teatwig/wf-utils.git
 [submodule "subprojects/wf-touch"]
 	path = subprojects/wf-touch
 	url = https://github.com/WayfireWM/wf-touch
